# graph-colouring

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  analysis.R  sample_data.py
dissertation/: dissertation.bib  dissertation.typ
scripts/: process_spaces.py  process_three_columns.py
src/: boost.cpp  boost.hpp  colouring.hpp  graph.cpp  graph.hpp  greedy.cpp  greedy.hpp  main.cpp  memory_tracker.cpp  memory_tracker.hpp  palette.cpp  palette.hpp  partition.cpp  partition.hpp  reader.cpp  reader.hpp  util.cpp  util.hpp  utils.cpp  utils.hpp
